# ai-daily-collector

./: .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ALL_SOURCES_IMPLEMENTED.md  API_V2_README.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN_ai-daily-collector_v0.1.md  CHANGELOG.md  CLAUDE_CODE_SETUP.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_DEPLOY_GUIDE.md  CLOUDFLARE_DEPLOY_ISSUES.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  Makefile  PHASE1_IMPLEMENTATION.md  PHASE2_DEPLOYMENT.md  README.md  REFERENCES.md  REFRAKTOR_PLAN.md  REQUIRED_TOOLS.md  analysis_result.json  answer.json  configure-delta.sh  deploy-all.sh  deploy-cf.sh  deploy-cloudflare-manual.sh  deploy-pages.sh  docker-compose.yml  exceptions.py  index.html  install-dev-tools.sh  manual-install.sh  (+15 more)
.ai_cache/: processed_urls.json
.github/workflows/: ai-daily.yml  ci.yml  cloudflare-deploy.yml  content-classification.yml  content-extraction.yml  content-processing.yml  content-summarization.yml  daily-report.yml  deploy-all.yml  deploy-frontend.yml  deploy.yml  ingest_schedule.yml  scheduled-collection.yml
.sisyphus/drafts/: article-summary-workflow.md
.sisyphus/plans/: fix-d1-encoding.md  worker-mcp-fix.md
ai/articles/original/: 36kr_test.md  sample1.md  sample2.md  sample3.md  sample4.md
ai/articles/original/2026-02-02/: ARXIV_1770031808_0.txt  ARXIV_1770031808_1.txt  ARXIV_1770031808_2.txt  ARXIV_1770038088_0.md  ARXIV_1770038088_1.md  DT_0_1770031809_1.txt  DT_0_1770031809_2.txt  DT_0_1770031809_4.txt  DT_0_1770038088_1.md  DT_0_1770038088_2.md  DT_0_1770039055_1.md  DT_0_1770039055_2.md  DT_0_1770039341_1.md  DT_0_1770039345_2.md  DT_0_1770040191_1.md  DT_0_1770040191_2.md  DT_0_1770045023_4.md  DT_17_1770076638_4.md  DT_20_1770045008_0.md  DT_20_1770076627_1.md  DT_22_1770045019_3.md  DT_24_1770076631_2.md  DT_26_1770076623_0.md  DT_2_1770038088_4.md  DT_2_1770039055_4.md  DT_2_1770039353_4.md  DT_2_1770040192_4.md  DT_4_1770031809_0.txt  DT_4_1770038088_0.md  DT_4_1770039055_0.md  DT_4_1770039339_0.md  DT_4_1770040191_0.md  DT_4_1770045015_2.md  DT_5_1770031809_3.txt  DT_5_1770045012_1.md  DT_7_1770076635_3.md  DT_8_1770038088_3.md  DT_8_1770039055_3.md  DT_8_1770039349_3.md  DT_8_1770040191_3.md  (+146 more)
ai/articles/original/2026-02-03/: DT_0_1770076820_4.md  DT_0_1770077047_4.md  DT_0_1770077442_4.md  DT_0_1770077699_4.md  DT_0_1770078506_4.md  DT_0_1770079939_4.md  DT_0_1770080745_4.md  DT_0_1770081718_4.md  DT_0_1770082141_4.md  DT_0_1770082490_4.md  DT_0_1770082963_4.md  (+896 more)
ai/articles/processed/: 36Kr测试文章.json  示例文章1.json  示例文章2.json  示例文章3.json  示例文章4.json
ai/daily/: REPORT.md  REPORT_METRICS.md  ai-hotspot-2026-02-02.md  ai-hotspot-2026-02-03.md
ai/reports/: daily_report_20260301.md  daily_report_20260302.md  daily_report_20260309.md
api/: classifier.py  cloudflare_worker.js  cloudflare_worker.py  handlers.py  main.py  mcp.py  mcp_tools.py  storage.py
api/storage/: dao.py
api/v2/: __init__.py  models.py  routes.py  routes_d1.py  routes_daily.py
api/v2/utils/: __init__.py  article_transformer.py  cache.py  category_classifier.py  tag_extractor.py
config/: __init__.py  config.py  frequency_words.txt  settings.py  settings.yaml  sources.yaml
dagster/: ai_content_pipeline.py
data/: daily.json  local.db
docs/: AI_SOLUTIONS.md  API_IMPLEMENTATION_PLAN.md  API_V2_DESIGN.md  ARCHITECTURE.md  ARCHITECTURE_ALL.md  ARCHITECTURE_CHANGELOG.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REDESIGN.md  CONTENT_PIPELINE_FLOW.md  CONTENT_PROCESSING_PLAN.md  DAILY_REPORT_TEMPLATE.md  DEBUGGING_LOG.md  DEPLOY_COMPARISON.md  FREE_OPEN_SOURCE_SOLUTION.md  FREE_SOLUTION_ENHANCED.md  FRONTEND_INTEGRATION.md  GITHUB_ACTIONS_CONTENT_PROCESSING_PLAN.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN_A_B_C.md  IMPLEMENTATION_PLAN_A_B_C_DETAILED.md  IMPLEMENTATION_PLAN_B_INIT.md  INDEX.md  MCP_WORKER_API.md  SUMMARIZE_BY_DATE.md  openapi.yaml  taskflaw_integration_plan.md
docs/plans/: 2025-02-03-data-source-architecture-design.md  2026-02-04-ai-daily-web-ui-design.md
docs/reports/: ai_articles_20260310.json  daily_report_20260310.md  daily_report_20260311.md  processed_articles_20260310.json  processed_articles_20260311.json
docs/schemas/: article_input.schema.json  article_processed.schema.json  daily_report.schema.json
fetchers/: __init__.py  ai_blogs.py  arxiv.py  base.py  devto.py  huggingface.py  newsnow.py  podcasts.py  producthunt.py  qbitai.py  reddit.py  tech_media.py  v2ex.py  youtube.py
ingestor/: main.py  main.py.backup
ingestor/scrapers/: __init__.py  article_scraper.py  arxiv_scraper.py  devto_scraper.py  hackernews_scraper.py  newsnow_scraper.py  reddit_scraper.py  rss_scraper.py  utils.py  v2ex_scraper.py
ingestor/storage/: d1_adapter.py  d1_client.py  db.py
ingestor/transformers/: article_transformer.py
scripts/: __init__.py  ai_daily_report_step_by_step.py  apply_summaries_to_d1.py  batch_process_articles.py  collect-ai-daily-cloud.sh  collect-for-cloud.py  collect-real.py  content_processor.py  daily-ai-workflow.py  daily_stats.py  deploy-cloudflare.sh  generate_daily_report.py  monitor.py  process_all_articles.py  report_generator.py  summarize_by_date.py
scripts/classifiers/: __init__.py  bge_classifier.py  rule_classifier.py
scripts/extractors/: __init__.py  crawl4ai_extractor.py  jina_extractor.py  multi_extractor.py  race_extractor.py  trafilatura_extractor.py
scripts/summarizers/: __init__.py  ollama_summarizer.py
shared/: models.py
skills/: SKILL.md  generate_report.py
tests/: __init__.py  ingest_skeleton_test.py  local_verify.py  test_all_scrapers.py  test_api.py  test_content_processor.py  test_core.py  test_dedup.py  test_dedup_simple.py  test_integration.py  test_report_generator.py  test_utils_audit.py  test_utils_rate_limit.py  test_utils_retry.py
utils/: __init__.py  audit.py  cache.py  errors.py  filter.py  helpers.py  logger.py  logging_config.py  metrics.py  notification.py  notion.py  rate_limit.py  retry.py  rss.py
(+1176 files in other folders)
