[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-daily-collector"
version = "0.2.0"
description = "AI 热点资讯自动采集与分发系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "xxl115", email = "contact@example.com"}
]

# Cloudflare Python Workers 兼容 - 只用标准库
dependencies = []

[project.optional-dependencies]
# 本地开发使用
local = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "colorlog>=6.8.0",
    "cryptography>=41.0.0",
    "pytz>=2024.1",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.0",
    "types-PyYAML>=6.0.0.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
    "rich>=13.7.0",
    "types-setuptools>=69.0.0.0",
]

# Cloudflare Python Workers 开发依赖
[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]

[project.scripts]
ai-collector = "scripts.daily_ai_workflow:main"

[project.urls]
Homepage = "https://github.com/xxl115/ai-daily-collector"
Repository = "https://github.com/xxl115/ai-daily-collector"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_daily_collector*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
